testdata/baselines/reference/submodule/conformance/callbackOnConstructor.errors.txt
callbackOnConstructor.js(5,14): error TS8010: Type annotations can only be used in TypeScript files.
callbackOnConstructor.js(12,12): error TS2304: Cannot find name 'ValueGetter_2'.
callbackOnConstructor.js(12,12): error TS8010: Type annotations can only be used in TypeScript files.


==== callbackOnConstructor.js (3 errors) ====
    export class Preferences {
      assignability = "no"
      /**
       * @callback ValueGetter_2
       * @param {string} name
                 ~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
       * @returns {boolean|number|string|undefined}
       */
      constructor() {}
    }
    
    
    /** @type {ValueGetter_2} */
               ~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'ValueGetter_2'.
               ~~~~~~~~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
    var ooscope2 = s => s.length > 0
    